End of desktop design

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Vegetables.jpg" alt="">
+                    <img src="/asetss/img/Green peas.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Vegetables</h4>
                         <p>So So what you’re looking for fresh produce meals</p>
@@ -370,11 +370,11 @@
             </div>
             <div class="porduct-introduction3-menu">
                 <ul>
-                    <li class="yellow-accent">All Categories</li>
-                    <li>Vegetables</li>
-                    <li>Fruits</li>
-                    <li>Juices</li>
-                    <li>Bakers</li>
+                    <li class="click" tabindex="1">All Categories</li>
+                    <li class="click" tabindex="1">Vegetables</li>
+                    <li class="click" tabindex="1">Fruits</li>
+                    <li class="click" tabindex="1">Juices</li>
+                    <li class="click" tabindex="1">Bakers</li>
                 </ul>
             </div>
             <section class="card-section card-section3">
@@ -430,7 +430,7 @@
                         </button>
                     </div>
                     <span class="heart">
-                        <img src="/asetss/img/heart2.svg" alt="">
+                        <img src="/asetss/img/heart4.svg" alt="">
                     </span>
                 </div>
                 <div class="card-item">
@@ -539,15 +539,326 @@
                         </button>
                     </div>
                     <span class="heart">
-                        <img src="/asetss/img/heart2.svg" alt="">
+                        <img src="/asetss/img/heart4.svg" alt="">
                     </span>
                 </div>
-
+                <div class="Left-arrow">
+                    <img src="/asetss/img/Left arrow.svg" alt="">
+                </div>
+                <div class="Right-arrow">
+                    <img src="/asetss/img/Right arrow.svg" alt="">
+                </div>
             </section>
         </section>
+        <section class="porduct-introduction4">
+            <div class="title-introduction">
+                <strong class="text-titel">
+                    Categories
+                </strong>
+                <button class="pordoct-button">
+                    <span>
+                        View More
+                    </span>
+                    <img src="/asetss/img/Arrow Right.svg" alt="">
+                </button>
+            </div>
+            <section class="juice-shake-container">
+                <div class="card-Categories card-Categories1">
+                    <span>Juices</span>
+                    <strong>Brocoli Shake</strong>
+                    <div class="star-box">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 66.svg" alt="">
+                        <span class="star-number">(1)</span>
+                    </div>
+                    <div class="sell-box">
+                        <b class="">175.00</b>
+                        <small class="">DA</small>
+                    </div>
+                    <button class="card-button">
+                        <span>
+                            Add to Cart
+                        </span>
+                        <img src="/asetss/img/Arrow Right.svg" alt="">
+                    </button>
+                    <img class="Fruit-image" src="/asetss/img/Pumpkin.png" alt="">
+                </div>
+                <div class="card-Categories card-Categories2">
+                    <span>Juices</span>
+                    <strong>Brocoli Shake</strong>
+                    <div class="star-box">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 66.svg" alt="">
+                        <span class="star-number">(1)</span>
+                    </div>
+                    <div class="sell-box">
+                        <b class="">175.00</b>
+                        <small class="">DA</small>
+                    </div>
+                    <button class="card-button">
+                        <span>
+                            Add to Cart
+                        </span>
+                        <img src="/asetss/img/Arrow Right.svg" alt="">
+                    </button>
+                    <img class="Fruit-image" src="/asetss/img/Banana.png" alt="">
+                </div>
+                <div class="card-Categories card-Categories3">
+                    <span>Juices</span>
+                    <strong>Brocoli Shake</strong>
+                    <div class="star-box">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 66.svg" alt="">
+                        <span class="star-number">(1)</span>
+                    </div>
+                    <div class="sell-box">
+                        <b class="">175.00</b>
+                        <small class="">DA</small>
+                    </div>
+                    <button class="card-button">
+                        <span>
+                            Add to Cart
+                        </span>
+                        <img src="/asetss/img/Arrow Right.svg" alt="">
+                    </button>
+                    <img class="Fruit-image" src="/asetss/img/Ecuador.png" alt="">
+                </div>
+                <div class="card-Categories card-Categories4">
+                    <span>Juices</span>
+                    <strong>Brocoli Shake</strong>
+                    <div class="star-box">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 22.svg" alt="">
+                        <img src="/asetss/img/Star 66.svg" alt="">
+                        <span class="star-number">(1)</span>
+                    </div>
+                    <div class="sell-box">
+                        <b class="">175.00</b>
+                        <small class="">DA</small>
+                    </div>
+                    <button class="card-button">
+                        <span>
+                            Add to Cart
+                        </span>
+                        <img src="/asetss/img/Arrow Right.svg" alt="">
+                    </button>
+                    <img class="Fruit-image" src="/asetss/img/Pitaya.png" alt="">
+                </div>
+            </section>
         </section>
+        <section class="banner-mine">
+            <div class="banner-mine-right">
+                <div class="banner-mine-right-item">
+                    <h1>Fruits §<br> Vegetables </h1>
+                    <p>These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!</p>
+                    <button class="button-baner-mine">
+                        View More
+                        <img src="/asetss/img/Arrow Right.svg" alt="">
+                    </button>
+                </div>
+            </div>
+            <div class="banner-mine-left">
+                <div class="banner-mine-left-item">
+                    <h1>Fruits §<br> Vegetables </h1>
+                    <p>These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!</p>
+                    <button class="button-baner-mine">
+                        View More
+                        <img src="/asetss/img/Arrow Right.svg" alt="">
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="survey">
+            <div class="survey-content">
+                <strong class="text-titel">
+                    Categories
+                </strong>
+                <p class="survey-text">These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!
+                </p>
+                <button class="survey-button">
+                    View More
+                    <img src="/asetss/img/Arrow Right.svg" alt="">
+                </button>
+            </div>
+            <div class="survey-testimonials">
+                <div class="testimonial-card">
+                    <div class="testimonial-card-left">
+                        <div class="testimonial-card-rating">
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9734;</span>
+                            <span class="testimonial-card-rating-star-number">4.5/5</span>
+                        </div>
+                        <strong class="testimonial-card-title">
+                            Categories
+                        </strong>
+                        <p class="testimonial-card-text">
+                            These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!
+                        </p>
+                        <div class="testimonial-card-comment-box">
+                            <div class="testimonial-card-avatar-box">
+                                <img src="/asetss/img/img-user-1.png" alt="" class="testimonial-card-avatar">
+                            </div>
+                            <div class="testimonial-name">
+                                <span class="testimonial-card-name">Mustapha Kadi</span>
+                                <span class="testimonial-card-role">Client</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card-right">
+                        <div class="testimonial-card-rating">
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9733;</span>
+                            <span class="testimonial-card-rating-star">&#9734;</span>
+                            <span class="testimonial-card-rating-star-number">4.5/5</span>
+                        </div>
+                        <strong class="testimonial-card-title">
+                            Categories
+                        </strong>
+                        <p class="testimonial-card-text">
+                            These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!
+                        </p>
+                        <div class="testimonial-card-comment-box">
+                            <div class="testimonial-card-avatar-box">
+                                <img src="/asetss/img/img-user-2.png" alt="" class="testimonial-card-avatar">
+                            </div>
+                            <div class="testimonial-name">
+                                <span class="testimonial-card-name">Mustapha Kadi</span>
+                                <span class="testimonial-card-role">Client</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slider__arrow">
+                        <div class="testimonial-slider-arrow-prev">
+                            <img src="/asetss/img/testimonial-slider-arrow-prev.svg" alt="">
+                        </div>
+                        <div class="testimonial-slider-arrow-next">
+                            <img src="/asetss/img/testimonial-slider-arrow-next.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="blogs">
+            <div class="blog-section-header">
+                <h2 class="blog-section-title">Blog § Articles</h2>
+                <p class="blog-section-description">These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!</p>
+            </div>
+            <div class="blog-section-list">
+                <article class="blog-card">
+                    <img src="/asetss/img/Fruit.jpg" alt="">
+                    <div class="blog-card-information">
+                        <h4>Fruit is an Essential food for our life</h4>
+                        <p>
+                            These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health..
+                        </p>
+                        <button class="blog-card-button">
+                            Read more
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </article>
 
+                <article class="blog-card">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="blog-card-information">
+                        <h4>Fruit is an Essential food for our life</h4>
+                        <p>
+                            These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health..
+                        </p>
+                        <button class="blog-card-button">
+                            Read more
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </article>
+
+                <article class="blog-card">
+                    <img src="/asetss/img/Vegetables.jpg" alt="">
+                    <div class="blog-card-information">
+                        <h4>Fruit is an Essential food for our life</h4>
+                        <p>
+                            These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health..
+                        </p>
+                        <button class="blog-card-button">
+                            Read more
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer-background-box"></div>
+        <section class="footer-section">
+            <div class="Foodmart">
+                <h4>
+                    Foodmart
+                </h4>
+                <p>These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health..</p>
+            </div>
+            <div class="features-section-container">
+                <div class="features-section-box">
+                    <h4 class="features-section-title">Navigation</h4>
+                    <ul class="features-section-list">
+                        <li>Search</li>
+                        <li>My Cart</li>
+                        <li>Categories</li>
+                        <li>Wishlist</li>
+                    </ul>
+                </div>
+
+                <div class="features-section-box">
+                    <h4 class="features-section-title">About Us</h4>
+                    <ul class="features-section-list">
+                        <li>About us</li>
+                        <li>Contact us</li>
+                        <li>Faq’s</li>
+                        <li>Delivery</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="newsletter">
+                <h4 class="newsletter-title">Subscribe newsletter and get 20% off</h4>
+                <p class="newsletter-description">These superfoods are packed with vital nutrients, including vitamins .
+                </p>
+                <form class="newsletter-form">
+                    <input type="email" class="newsletter-input" placeholder="Enter email address.....">
+                    <button type="submit" class="newsletter-button">
+                        <img src="/asetss/img/east_27dp_0A490A_FILL0_wght400_GRAD0_opsz24.svg" alt="east">
+                    </button>
+                </form>
+            </div>
+        </section>
+        <div class="footer-bottom">
+            <p class="footer-copy">
+                2024, All Rights Reserved
+            </p>
+            <p class="footer-author">
+                Made by
+                <span>
+                    Hadj cadi Mustapha
+                </span>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
