Small Mobile Devices (≤575px)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <li><a href="#">Vegetable</a></li>
         </ul>
 
+        <!-- menu-mobile -->
+        <a href="#" title="menu-mobile">
+            <img class="menu-mobile" src="/asetss/img/menu_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+        </a>
+
         <!-- Search Box -->
         <div class="search-box">
             <input type="text" class="search-input" placeholder="Search products">
@@ -869,7 +874,7 @@
                 <div class="testimonial-card">
 
                     <!-- Left Testimonial Card -->
-                    <div class="testimonial-card-left">
+                    <div class="testimonial-card-box">
                         <!-- Rating -->
                         <div class="testimonial-card-rating">
                             <span class="testimonial-card-rating-star">&#9733;</span>
@@ -899,7 +904,7 @@
                     </div>
 
                     <!-- Right Testimonial Card -->
-                    <div class="testimonial-card-right">
+                    <div class="testimonial-card-box">
                         <!-- Rating -->
                         <div class="testimonial-card-rating">
                             <span class="testimonial-card-rating-star">&#9733;</span>
