--- a/index.html
+++ b/index.html
@@ -47,7 +47,33 @@
                         <h3 class="foodmart">FOODMART</h3>
                     </div>
                     <hr>
+                    <div class="search-box-mobil">
+                        <input type="text" class="search-input" placeholder="Search products">
+                        <img src="/asetss/img/Vector.svg" alt="Search Icon">
+                    </div>
+                    <div class="menu-mobile-content">
+                        <ul class="menu-mobile-list">
+                            <li class="category-item">menu
+                                <div class="subcategory-dropdown">
+                                    <ul class="subcategory-list">
+                                        <li><a href="#">Fruit</a></li>
+                                        <li><a href="#">Vegetable</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="category-item">Profile
+                                <div class="subcategory-dropdown">
+                                    <ul class="subcategory-list">
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">Wishlist</a></li>
+                                        <li><a href="#">My Cart</a></li>
+                                        <li><a href="#">Profile</a></li>
+                                    </ul>
+                                </div>
+                            </li>
 
+                        </ul>
+                    </div>
                 </div>
             </div>
 
@@ -1095,6 +1121,28 @@
             <p class="footer-author">
                 Made by <span>Hadj cadi Mustapha</span>
             </p>
+        </div>
+        <div class="footer-nav">
+            <div class="footer-nav-section">
+                <a href="#">
+                    <img src="/asetss/img/home-32.svg" alt="Profile">
+                </a>
+            </div>
+            <div class="footer-nav-section">
+                <a href="#">
+                    <img src="/asetss/img/favorite_32.svg" alt="Profile">
+                </a>
+            </div>
+            <div class="footer-nav-section">
+                <a href="#">
+                    <img src="/asetss/img/shopping_cart_32.svg" alt="Profile">
+                </a>
+            </div>
+            <div class="footer-nav-section">
+                <a href="#">
+                    <img src="/asetss/img/account_circle_32.svg" alt="Profile">
+                </a>
+            </div>
         </div>
 
     </footer>
